Добавил конвертацию типов sql